Fix <pre> text wrap

--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,14 @@ code {
   display: inline-block;
 }
 
+pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
+
 .content {
   padding: 1rem;
   a {
